{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 144,
  "lineage": "ec97ba3a-d33c-7b1e-b6b2-fd890f222c35",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02132c4441b26d37e",
            "association_id": "eipassoc-0f1669a9da167d590",
            "domain": "vpc",
            "id": "eipalloc-02132c4441b26d37e",
            "instance": "i-0e3a13253e8d323ed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f725f9b2292c877c",
            "private_dns": "ip-10-0-101-185.ec2.internal",
            "private_ip": "10.0.101.185",
            "public_dns": "ec2-54-159-62-184.compute-1.amazonaws.com",
            "public_ip": "54.159.62.184",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.bastionsg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:security-group/sg-0bce157f262551ee1",
            "description": "SG for bastion host connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bce157f262551ee1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-bastion-sg-20220913231917485300000001",
            "name_prefix": "public-bastion-sg-",
            "owner_id": "415578120655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-bastion-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "public-bastion-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastionsg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2583476105",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bce157f262551ee1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastionsg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1004303364",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bce157f262551ee1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:415578120655:instance/i-0cd5bd3a88d42534d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd5bd3a88d42534d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e64582005b3f863a",
            "private_dns": "ip-10-0-1-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db2fca811a1569a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097f01e8511ff3bfe",
            "tags": {
              "Name": "SAP-stage-PrivateHost-1",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-PrivateHost-1",
              "environment": "stage",
              "owners": "SAP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "SAP-stage-PrivateHost-1"
            },
            "vpc_security_group_ids": [
              "sg-0d855a3768be5df36"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:415578120655:instance/i-0b5781b2561fe34e9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5781b2561fe34e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07db9515c2314a97b",
            "private_dns": "ip-10-0-2-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2663e9aa22f22b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078828a4b2c4011ed",
            "tags": {
              "Name": "SAP-stage-PrivateHost-2",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-PrivateHost-2",
              "environment": "stage",
              "owners": "SAP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "SAP-stage-PrivateHost-2"
            },
            "vpc_security_group_ids": [
              "sg-0d855a3768be5df36"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:415578120655:instance/i-0e3a13253e8d323ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3a13253e8d323ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f725f9b2292c877c",
            "private_dns": "ip-10-0-101-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.185",
            "public_dns": "ec2-54-159-62-184.compute-1.amazonaws.com",
            "public_ip": "54.159.62.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df8d2103150f4859",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb595d1d6232ab39",
            "tags": {
              "Name": "SAP-stage-BastionHost",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-BastionHost",
              "environment": "stage",
              "owners": "SAP"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "SAP-stage-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-0bce157f262551ee1"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:415578120655:loadbalancer/SAP-stage-myelb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "SAP-stage-myelb-439367010.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "SAP-stage-myelb",
            "idle_timeout": 60,
            "instances": [
              "i-0b5781b2561fe34e9",
              "i-0cd5bd3a88d42534d"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 81,
                "lb_protocol": "http"
              }
            ],
            "name": "SAP-stage-myelb",
            "security_groups": [
              "sg-08da748f71e23cdf8"
            ],
            "source_security_group": "415578120655/loadbalancer-sg-20220913231917678300000003",
            "source_security_group_id": "sg-08da748f71e23cdf8",
            "subnets": [
              "subnet-071ea1ba1aa4fa754",
              "subnet-0fb595d1d6232ab39"
            ],
            "tags": {
              "Name": "SAP-stage-myelb",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myelb",
              "environment": "stage",
              "owners": "SAP"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:security-group/sg-08da748f71e23cdf8",
            "description": "SG for loadbalancer, HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08da748f71e23cdf8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "loadbalancer-sg-20220913231917678300000003",
            "name_prefix": "loadbalancer-sg-",
            "owner_id": "415578120655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loadbalancer-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "loadbalancer-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-419988435",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08da748f71e23cdf8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3985065893",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08da748f71e23cdf8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "81 from internet",
            "from_port": 81,
            "id": "sgrule-36583875",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08da748f71e23cdf8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 81,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.privatesg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:security-group/sg-0d855a3768be5df36",
            "description": "SG for private subnet hosting EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d855a3768be5df36",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-sg-20220913231917485300000002",
            "name_prefix": "private-sg-",
            "owner_id": "415578120655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "private-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.privatesg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2897161801",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d855a3768be5df36",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.privatesg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-4180848989",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d855a3768be5df36",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1968861283",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d855a3768be5df36",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083f17606a2b10420",
            "association_id": "eipassoc-01b01ce7f3425ee33",
            "domain": "vpc",
            "id": "eipalloc-083f17606a2b10420",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d584acc25830627d",
            "private_dns": "ip-10-0-101-168.ec2.internal",
            "private_ip": "10.0.101.168",
            "public_dns": "ec2-52-203-160-46.compute-1.amazonaws.com",
            "public_ip": "52.203.160.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SAP-stage-myvpc-us-east-1a",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-us-east-1a",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:internet-gateway/igw-00bf2328079f4e89e",
            "id": "igw-00bf2328079f4e89e",
            "owner_id": "415578120655",
            "tags": {
              "Name": "SAP-stage-myvpc",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083f17606a2b10420",
            "connectivity_type": "public",
            "id": "nat-0be5a41aa3f4fd1a0",
            "network_interface_id": "eni-0d584acc25830627d",
            "private_ip": "10.0.101.168",
            "public_ip": "52.203.160.46",
            "subnet_id": "subnet-0fb595d1d6232ab39",
            "tags": {
              "Name": "SAP-stage-myvpc-us-east-1a",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-us-east-1a",
              "environment": "stage",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00f4fce89188852b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0be5a41aa3f4fd1a0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00f4fce89188852b2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00bf2328079f4e89e",
            "id": "r-rtb-0a0fbbf55df50c1ac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0fbbf55df50c1ac",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:route-table/rtb-0051427b5de9b3cda",
            "id": "rtb-0051427b5de9b3cda",
            "owner_id": "415578120655",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-stage-myvpc-db",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-db",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:route-table/rtb-00f4fce89188852b2",
            "id": "rtb-00f4fce89188852b2",
            "owner_id": "415578120655",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0be5a41aa3f4fd1a0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SAP-stage-myvpc-private",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-private",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:route-table/rtb-0a0fbbf55df50c1ac",
            "id": "rtb-0a0fbbf55df50c1ac",
            "owner_id": "415578120655",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00bf2328079f4e89e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SAP-stage-myvpc-public",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-public",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0233cff5f8ff3c602",
            "route_table_id": "rtb-0051427b5de9b3cda",
            "subnet_id": "subnet-08a2a79cc434ecadb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07895bc8f1269d8b5",
            "route_table_id": "rtb-0051427b5de9b3cda",
            "subnet_id": "subnet-0a57fb79f3508e866"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb565fcc46f239d5",
            "route_table_id": "rtb-00f4fce89188852b2",
            "subnet_id": "subnet-097f01e8511ff3bfe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cccdc0e0a52c56b",
            "route_table_id": "rtb-00f4fce89188852b2",
            "subnet_id": "subnet-078828a4b2c4011ed"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045dc33455d655a93",
            "route_table_id": "rtb-0a0fbbf55df50c1ac",
            "subnet_id": "subnet-0fb595d1d6232ab39"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ee6626ae959adc0",
            "route_table_id": "rtb-0a0fbbf55df50c1ac",
            "subnet_id": "subnet-071ea1ba1aa4fa754"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-08a2a79cc434ecadb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a2a79cc434ecadb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-0a57fb79f3508e866",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a57fb79f3508e866",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-097f01e8511ff3bfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097f01e8511ff3bfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-078828a4b2c4011ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078828a4b2c4011ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-0fb595d1d6232ab39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb595d1d6232ab39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-071ea1ba1aa4fa754",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071ea1ba1aa4fa754",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f6d0f24878919f95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:vpc/vpc-0f6d0f24878919f95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01adf466baf356637",
            "default_route_table_id": "rtb-025c64c84def44ebe",
            "default_security_group_id": "sg-0afa1bfef09683545",
            "dhcp_options_id": "dopt-058da62e252062abe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f6d0f24878919f95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025c64c84def44ebe",
            "owner_id": "415578120655",
            "tags": {
              "Name": "SAP-stage-myvpc",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc",
              "environment": "stage",
              "owners": "SAP"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}